--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -45,6 +45,14 @@ input {
     outline: 0;
 }
 
+select {
+    padding: 10px;
+    margin: 10px;
+    font-size: 12pt;
+    border: 0;
+    outline: 0;
+}
+
 button {
     padding: 10px;
     margin: 0 auto;
