--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -86,12 +86,31 @@ tr:hover {
 }
 
 .taskList {
-    width: 75%;
+    width: 60%;
     background-color: #C1CE96;
     margin-top: 30px;
     padding: 20px 100px;
     border: 3px solid #687D77;
     border-radius: 10px;
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    outline: 0;
+    box-shadow: none;
+    border: 0 !important;
+    width: 200px;
+    background: #ECEBF0;
+    line-height: 2.5;
+    overflow: hidden;
+    border-radius: .25em;
+    font-size: 10pt;
+    margin: 0;
+    padding: 0 0 0 .5em;
+    color: #687D77;
+    cursor: pointer;
 }
 
 table {
