--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -20,11 +20,11 @@ header {
 }
 
 .manage {
-    width: 60%;
+    width: 35%;
     background-color: rgba(72, 74, 71, 0.75);
     align-items: center;
     text-align: center;
-    padding: 20px 100px;
+    padding: 10px;
     margin-top: 20px;
     border: 3px solid #C1CE96;
     border-radius: 10px;
@@ -41,6 +41,15 @@ header {
     outline-color: #C1CE96;
 }
 
+#newCategoryIn {
+    width: 60%;
+    padding: 10px;
+    background-color: #ECEBF0;
+    font-size: 12pt;
+    border: 0;
+    outline-color: #C1CE96;
+}
+
 button {
     padding: 10px;
     margin: 0 auto;
@@ -49,7 +58,7 @@ button {
 }
 
 td, th {
-    padding: 20px;
+    padding: 10px;
     margin: 0px;
     border-bottom: 1px dashed #484A47;
 }
@@ -65,8 +74,8 @@ td:hover {
 .taskList {
     width: 60%;
     background-color: #C1CE96;
-    margin-top: 30px;
-    padding: 20px 100px;
+    margin: 30px 0px;
+    padding: 10px;
     border: 3px solid #687D77;
     border-radius: 10px;
 }
